--- a/templates/home/show.html.twig
+++ b/templates/home/show.html.twig
@@ -18,7 +18,7 @@
 		<table class="table">
 			<tbody>
 				<tr>
-					<th>Heuren de début</th>
+					<th>Heure de début</th>
 					<td>{{ evenement.heureEvenement ? evenement.heureEvenement|date('H:i') : '' }}</td>
 				</tr>
 				<tr>
