--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -25,8 +25,61 @@
                     <td>{{ participation.evenement.nomEvenement }}</td>
                     <td>{{ participation.dateParticipation ? participation.dateParticipation|date('Y-m-d') : '' }}</td>
                     <td>
-                        <a href="{{ path('app_participation_show', {'id': participation.id}) }}">show</a>
-                        <a href="{{ path('app_participation_edit', {'id': participation.id}) }}">edit</a>
+                    {% for evenement in evenements %}
+                        {% if participation.evenement.id == evenement.id %}
+                        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas{{ evenement.id }}" aria-controls="offcanvasRight">Détails</button>
+                        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas{{ evenement.id }}" aria-labelledby="offcanvasRightLabel">
+                            <div class="offcanvas-header">
+                                <h5 class="offcanvas-title" id="offcanvasRightLabel">Détail de l'évènement</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            </div>
+                            <div class="offcanvas-body">
+                                <table class="table">
+                                    <tbody>
+                                        <tr>
+                                            <th>Heure</th>
+                                            <td>{{ evenement.heureEvenement ? evenement.heureEvenement|date('H:i') : '' }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Descriptif</th>
+                                            <td>{{ evenement.descriptif }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Ville</th>
+                                            <td>{{ evenement.villeEvenement }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Code postal</th>
+                                            <td>{{ evenement.codePostalEvenement }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Adresse</th>
+                                            <td>{{ evenement.adresse }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Nom du lieu</th>
+                                            <td>{{ evenement.nomLieu }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Capacite total</th>
+                                            <td>{{ evenement.capaciteTotal }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Duree</th>
+                                            <td>{{ evenement.duree }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Tarif</th>
+                                            <td>{{ evenement.tarifEvenement }} €</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <a class='btn btn-info mb-5' href="{{ path('app_home_show', {'id': evenement.id}) }}">Page de l'évènement</a>
+                                {{ include('participation/_delete_form.html.twig') }}
+                            </div>
+                        </div>
+                        {% endif %}
+                    {% endfor %}
                     </td>
                 </tr>
             {% endif %}
@@ -58,16 +111,24 @@
         {% for evenement in evenements %}
             {% if evenement.user.id is same as app.user.id %}
             <tr>
-                <td>{{ evenement.statusEvenement }}</td>
+                <td>
+                    <span 
+                    {% if evenement.statusEvenement == 'En attente de validation' %}
+                    class="btn btn-secondary">
+                    {% else %}
+                    class="btn btn-success">
+                    {% endif %}
+                    {{ evenement.statusEvenement }}</span>
+                </td>
                 <td>{{ evenement.nomEvenement }}</td>
                 <td>{{ evenement.dateEvenement ? evenement.dateEvenement|date('d-m-Y') : '' }}</td>
                 <td>{{ evenement.villeEvenement }}</td>
                 <td>{{ evenement.nomLieu }}</td>
-                <td>{{ evenement.tarifEvenement }}</td>
+                <td>{{ evenement.tarifEvenement }} €</td>
                 <td>{{ evenement.dateCreation ? evenement.dateCreation|date('d-m-Y') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_evenement_show', {'id': evenement.id}) }}">show</a>
-                    <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
+                    <a class="btn btn-info" href="{{ path('app_evenement_show', {'id': evenement.id}) }}">voir</a>
+                    <a class="btn btn-secondary" href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">modifier</a>
                 </td>
             </tr>
             {% endif %}
@@ -86,17 +147,70 @@
         <thead class="table-dark">
             <tr>
                 <th>Date de Reservation</th>
+                <th>Evenement lié</th>
+                <th>Prix de la place</th>
+                <th>Date de départ</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for reservation in reservations %}
             <tr>
+                {% if reservation.user.id is same as app.user.id %}
                 <td>{{ reservation.dateReservation ? reservation.dateReservation|date('Y-m-d') : '' }}</td>
+                <td>{{ reservation.transport.evenement.nomEvenement  }}</td>
+                <td>{{ reservation.transport.TarifPersonne }} €</td>
+                <td>{{ reservation.transport.DateDepart ? reservation.transport.DateDepart|date('d-m-Y à H:i') : '' }}</td>
                 <td>
-                    <a href="{{ path('app_reservation_show', {'id': reservation.id}) }}">show</a>
-                    <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}">edit</a>
+                {% for transport in transports %}
+                    {% if transport.id == reservation.transport.id %}
+                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas{{ transport.id }}" aria-controls="offcanvasRight">Détails</button>
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas{{ transport.id }}" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasRightLabel">Détail du transport réserver</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <table class="table">
+                                <tbody>
+                                    <tr>
+                                        <th>TarifPersonne</th>
+                                        <td>{{ transport.TarifPersonne }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Descriptif</th>
+                                        <td>{{ transport.descriptif }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>InfoContact</th>
+                                        <td>{{ transport.InfoContact }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>DateDepart</th>
+                                        <td>{{ transport.DateDepart ? transport.DateDepart|date('Y-m-d H:i:s') : '' }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>LieuDepart</th>
+                                        <td>{{ transport.LieuDepart }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>NbPlace</th>
+                                        <td>{{ transport.NbPlace }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>InfoPaiement</th>
+                                        <td>{{ transport.InfoPaiement }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <a class='btn btn-info mb-5' href="{{ path('app_transport_show', {'id': transport.id}) }}">Page de l'évènement</a>
+                            {{ include('reservation/_delete_form.html.twig') }}
+                        </div>
+                    </div>
+                    {% endif %}
+                {% endfor %}
                 </td>
+                {% endif %}
             </tr>
         {% else %}
             <tr>
@@ -125,16 +239,16 @@
         {% for transport in transports %}
             {% if transport.user.id is same as app.user.id %}
                 <tr>
-                    <td>{{ transport.StatutTransport }}</td>
-                    <td>{{ transport.TarifPersonne }}</td>
+                    <td><span class="btn btn-secondary">{{ transport.StatutTransport }}</span></td>
+                    <td>{{ transport.TarifPersonne }} €</td>
                     <td>{{ transport.InfoContact }}</td>
                     <td>{{ transport.DateDepart ? transport.DateDepart|date('Y-m-d H:i:s') : '' }}</td>
                     <td>{{ transport.LieuDepart }}</td>
                     <td>{{ transport.NbPlace }}</td>
                     <td>{{ transport.InfoPaiement }}</td>
                     <td>
-                        <a href="{{ path('app_transport_show', {'id': transport.id}) }}">show</a>
-                        <a href="{{ path('app_transport_edit', {'id': transport.id}) }}">edit</a>
+                        <a class="btn btn-info" href="{{ path('app_transport_show', {'id': transport.id}) }}">voir</a>
+                        <a class="btn btn-secondary" href="{{ path('app_transport_edit', {'id': transport.id}) }}">modifier</a>
                     </td>
                 </tr>
             {% endif %}    
