mise en page, barre nv

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -19,8 +19,7 @@
 }
 
 .side-nav {
-    background: rgb(248, 249, 250);
-    background: linear-gradient(180deg, rgba(248, 249, 250, 1) 5%, rgba(33, 37, 41, 1) 35%);
+    background: #F07675;
 }
 
 .event-badge {
