--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,49 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Here We Go !!{% endblock %}
+{% block title %}Here We Go !!
+{% endblock %}
 
 {% block body %}
-{% for message in app.flashes('success') %}
-            <div class="alert alert-success">
-                {{ message }}
-            </div>
-        {% endfor %}
-<div class="home-banner">
-    <h1>Idée de sortie</h1>
-    <img>
-</div>
-<section class="home-category-list">
-    <ul>
-    {% for categorie in categories %}
-        <li>
-            {% if categorie.couleur != '#FFFFFF' %}
-            <a href="{{  path('app_home_category', {'id':categorie.id}) }}" class="btn btn-category m-4" style="color: white; background-color:{{ categorie.couleur}}">
-            {% else %}
-            <a href="{{  path('app_home_category', {'id':categorie.id}) }}" class="btn btn-category m-4" style="background-color:{{ categorie.couleur}}">
-            {% endif %}
-                {{ categorie.libelleCategorie }}
-            </a>
-        </li>
-    {% endfor %}
-    </ul>
-</section>
-<section class="home-event-overview">
-    <div class="row gx-5 my-5">
-    {% for image in images %}
-        <div class="col-sm-12 col-md-6 col-lg-4 mb-5">
-            <div class="card event-card" style="height:450px;">
-                <div class="event-badge" style="background-color: {{ image.evenement.categorie.couleur}}"></div>
-                <img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '')  }}" alt="" style="height:230px" />
-                <div class="card-body">
-                    <h5 class="card-title">{{ image.evenement.nomEvenement }}</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
-                    <p class="card-text">{{ image.evenement.descriptif[:80] ~ (image.evenement.descriptif|length > 80 ? '…' ) }}
-                    </p>
-                    <a href="{{ path('app_home_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    </div>
-</section>
-{% endblock %}
+	{% for message in app.flashes('success') %}
+		<div class="alert alert-success">
+			{{ message }}
+		</div>
+	{% endfor %}
+	<div class="home-banner mt-5">
+		<h1>Idée de sortie</h1>
+		<img>
+	</div>
+	<section class="home-category-list">
+		<ul>
+			{% for categorie in categories %}
+				<li>
+					{% if categorie.couleur != '#FFFFFF' %}
+						<a href="{{ path('app_home_category', {'id':categorie.id}) }}" class="btn btn-category m-4" style="color: white; background-color:{{ categorie.couleur}}">
+						{% else %}
+							<a href="{{ path('app_home_category', {'id':categorie.id}) }}" class="btn btn-category m-4" style="background-color:{{ categorie.couleur}}">
+							{% endif %}
+							{{ categorie.libelleCategorie }}
+						</a>
+					</li>
+				{% endfor %}
+			</ul>
+		</section>
+		<section class="home-event-overview">
+			<div class="row gx-5 my-5">
+				{% for image in images %}
+					<div class="col-sm-12 col-md-6 col-lg-4 mb-5">
+						<div class="card event-card" style="height:450px;">
+							<div class="event-badge" style="background-color: {{ image.evenement.categorie.couleur}}"></div>
+							<img src="{{ asset('imgs/evenement/' ~ image.imageName ~ '') }}" alt="" style="height:230px"/>
+							<div class="card-body">
+								<h5 class="card-title">{{ image.evenement.nomEvenement }}</h5>
+								<h6 class="card-subtitle mb-2 text-body-secondary">{{ image.evenement.dateEvenement ? image.evenement.dateEvenement|date('Y-m-d') : '' }}</h6>
+								<p class="card-text">{{ image.evenement.descriptif[:80] ~ (image.evenement.descriptif|length > 80 ? '…' ) }}
+								</p>
+								<a href="{{ path('app_home_show', {'id': image.evenement.id}) }}" class="btn btn-secondary">En savoir plus</a>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</section>
+	{% endblock %}
