--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,7 +56,7 @@
 							<li class="nav-item">
 								<form class="d-flex" role="search">
 									<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-									<button class="btn btn-outline-success" type="submit">Search</button>
+									<button class="btn btn-outline-info" type="submit">Search</button>
 								</form>
 							</li>
 							<li class="nav-item dropdown">
@@ -86,15 +86,15 @@
 				<div class="container">
 					<ul class="nav sticky-top py-2">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="{{path('app_dashboard')}}">
+							<a class="nav-link active" aria-current="page" href="{{path('app_dashboard')}}" style="color : black;">
 								<img src="{{ asset('imgs/baseline-home.svg') }}" class="img-fluid" style="width:50px; height:auto;">
 								Dashboard
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">
+							<a class="nav-link" href="#" style="color : black;">
 								<img src="{{ asset('imgs/event-sharp.svg') }}" class="img-fluid" style="width:50px; height:auto;">
-								evenement
+								Evenement
 							</a>
 						</li>
 						<li class="nav-item">
@@ -109,67 +109,38 @@
 		{% endif %}
 		<div class="container"> {% block body %}{% endblock %}
 			</div>
+			<footer class="text-bg-dark">
+				<div class="container">
+					<div class="row pb-5">
+						<div class="footer-logo col-lg-6 d-flex justify-content-start">
+							<div class="d-flex justify-content-start align-items-center">
+								<img src="{{ asset('imgs/logo.png') }}" alt="#">
+								<ul class="footer-contact">
+									<li>Adresse</li>
+									<li>Téléphone</li>
+									<li>Mail</li>
+								</ul>
+								<ul class="footer-social d-flex justify-content-between">
+									<li>
+										<a href="#"><img src="http://placehold.co/30x30"></a>
+									</li>
+									<li>
+										<a href="#"><img src="http://placehold.co/30x30"></a>
+									</li>
+									<li>
+										<a href="#"><img src="http://placehold.co/30x30"></a>
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<div class="footer-about col-lg-6">
+							<h1>Qui sommes-nous?</h1>
+							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
+						</div>
+					</ul>
+				</div>
+			</div>
 		</body>
 	</html>
-</div></div><footer class="text-bg-dark">
-<div class="container">
-	<div class="row gy-4">
-		<div class="footer-logo col-lg-3">
-			<img src="{{ asset('imgs/logo.png') }}" alt="#">
-			<ul class="footer-contact">
-				<li>Adresse</li>
-				<li>Téléphone</li>
-				<li>Mail</li>
-			</ul>
-			<ul class="footer-social d-flex justify-content-between">
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-lg-3">
-			<h1>Navigation</h1>
-			<ul class="footer-nav">
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-			</ul>
-		</div>
-		<div class="footer-about col-lg-3">
-			<h1>Qui sommes-nous?</h1>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
-		</div>
-		<div class="footer-event col-lg-3">
-			<h1>à découvrir</h1>
-			<ul class="footer-event-box d-flex flex-wrap">
-				<li>
-					<a href="#"><img src="{{ absolute_url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK6c34VhXvxEpsH0wG1WQHdR3tk89ZTCK4MhDfLfqrCw&s')}}" alt="Instagram 01"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 02"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 03"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 04"></a>
-				</li>
-			</ul>
-		</div>
-	</div>
 </div></footer></body></html>
