--- a/templates/type_transport/new.html.twig
+++ b/templates/type_transport/new.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New TypeTransport{% endblock %}
+{% block title %}New TypeTransport
+{% endblock %}
 
 {% block body %}
-    <h1>Create new TypeTransport</h1>
+	<h1 class="my-5">Création d'un nouveau transport</h1>
 
-    {{ include('type_transport/_form.html.twig') }}
+	{{ include('type_transport/_form.html.twig') }}
 
-    <a href="{{ path('app_type_transport_index') }}">back to list</a>
+	<a href="{{ path('app_type_transport_index') }}">back to list</a>
 {% endblock %}
