--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>
@@ -107,69 +106,72 @@
 				</div>
 			</nav>
 		{% endif %}
-		<div class="container"> {% block body %}{% endblock %}
+		<div class="container">
+		{% block body %}
+		{% endblock %}
+		</div>
+	</body>
+	<footer class="text-bg-dark">
+		<div class="container">
+			<div class="row gy-4">
+				<div class="footer-logo col-lg-3">
+					<img src="{{ asset('imgs/logo.png') }}" alt="#">
+					<ul class="footer-contact">
+						<li>Adresse</li>
+						<li>Téléphone</li>
+						<li>Mail</li>
+					</ul>
+					<ul class="footer-social d-flex justify-content-between">
+						<li>
+							<a href="#"><img src="http://placehold.co/30x30"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.co/30x30"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.co/30x30"></a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-lg-3">
+					<h1>Navigation</h1>
+					<ul class="footer-nav">
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+						<li>
+							<a href="#">Lien nav</a>
+						</li>
+					</ul>
+				</div>
+				<div class="footer-about col-lg-3">
+					<h1>Qui sommes-nous?</h1>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
+				</div>
+				<div class="footer-event col-lg-3">
+					<h1>à découvrir</h1>
+					<ul class="footer-event-box d-flex flex-wrap">
+						<li>
+							<a href="#"><img src="{{ absolute_url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK6c34VhXvxEpsH0wG1WQHdR3tk89ZTCK4MhDfLfqrCw&s')}}" alt="Instagram 01"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 02"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 03"></a>
+						</li>
+						<li>
+							<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 04"></a>
+						</li>
+					</ul>
+				</div>
 			</div>
-		</body>
-	</html>
-</div></div><footer class="text-bg-dark">
-<div class="container">
-	<div class="row gy-4">
-		<div class="footer-logo col-lg-3">
-			<img src="{{ asset('imgs/logo.png') }}" alt="#">
-			<ul class="footer-contact">
-				<li>Adresse</li>
-				<li>Téléphone</li>
-				<li>Mail</li>
-			</ul>
-			<ul class="footer-social d-flex justify-content-between">
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/30x30"></a>
-				</li>
-			</ul>
 		</div>
-		<div class="col-lg-3">
-			<h1>Navigation</h1>
-			<ul class="footer-nav">
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-				<li>
-					<a href="#">Lien nav</a>
-				</li>
-			</ul>
-		</div>
-		<div class="footer-about col-lg-3">
-			<h1>Qui sommes-nous?</h1>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
-		</div>
-		<div class="footer-event col-lg-3">
-			<h1>à découvrir</h1>
-			<ul class="footer-event-box d-flex flex-wrap">
-				<li>
-					<a href="#"><img src="{{ absolute_url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK6c34VhXvxEpsH0wG1WQHdR3tk89ZTCK4MhDfLfqrCw&s')}}" alt="Instagram 01"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 02"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 03"></a>
-				</li>
-				<li>
-					<a href="#"><img src="http://placehold.co/85x85" alt="Instagram 04"></a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</div></footer></body></html>
+	</footer>
+</html>
