--- a/templates/admin/nav-admin.html.twig
+++ b/templates/admin/nav-admin.html.twig
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-justified">
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Evenement</a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu z-3">
         <li><a class="dropdown-item" href="#">Evenement</a></li>
         <li><a class="dropdown-item" href="#">Participation</a></li>
         <li><a class="dropdown-item" href="#">Catégorie</a></li>
