--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard
-{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block body %}
 <nav class="navbar bg-body-tertiary dashboard-nav">
@@ -235,4 +234,6 @@
 {% endif %}{% else %}
 <tr>
 	<td colspan="11">no records found</td>
-</tr>{% endfor %}</tbody></table>{% endblock %}
+</tr>{% endfor %}</tbody></table>
+</div>
+{% endblock %}
