ajout d'une description dans le footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -135,7 +135,7 @@
 
 					<div class="footer-about col-lg-6">
 						<h1>Qui sommes-nous?</h1>
-						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt quae sapiente officia earum? Quia ea modi nostrum ad libero et corporis quisquam eius, nemo vel! Itaque delectus similique voluptatum temporibus!</p>
+						<p>Nous sommes une plateforme conviviale où les organisateurs peuvent publier divers événements, qu'il s'agisse de festivals, de conférences, de manifestations sportives ou autres. Mais ce qui nous distingue, c'est notre fonctionnalité unique qui permet aux utilisateurs de proposer des transports pour ces événements. Que ce soit en covoiturage, en transport en commun ou d'autres moyens, chacun peut offrir un trajet pour faciliter la participation. Ainsi, nous favorisons non seulement la découverte d'événements, mais aussi la création de liens communautaires en facilitant le déplacement des participants.</p>
 					</div>
 				</ul>
 			</div>
