--- a/templates/admin/nav-admin.html.twig
+++ b/templates/admin/nav-admin.html.twig
@@ -4,7 +4,7 @@
         <ul class="dropdown-menu z-3">
         <li><a class="dropdown-item" href="#">Evenement</a></li>
         <li><a class="dropdown-item" href="#">Participation</a></li>
-        <li><a class="dropdown-item" href="#">Catégorie</a></li>
+        <li><a class="dropdown-item" href="{{ path('app_admin_categorie') }}">Catégorie</a></li>
         </ul>
     </li>
     <li class="nav-item dropdown">
