--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 <nav class="navbar bg-body-tertiary dashboard-nav">
 	<div class="container-fluid">
-		<span class="navbar-brand mb-0 h1 fs-2">Dashboard</span>
+		<span class="navbar-brand mb-0 fs-1">Dashboard</span>
 	</div>
 </nav>
 <div class="last-participation my-5">
