modif bas du dashboard

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -236,7 +236,7 @@
 	</tr>
 {% endif %}{% else %}
 <tr>
-	<td colspan="11">no records found</td>
+	<td colspan="11">Aucun éléments</td>
 </tr>{% endfor %}</tbody></table>
 </div>
 {% endblock %}
